--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <label for="menu-toggle" class="hamburger">☰ Menu</label>
         <nav class="menu">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Unidades</a></li>
+            <li><a href="https://www.instagram.com/hey.bryan01/" target="_blank">Home</a></li>
+            <li><a href="https://www.instagram.com/hey.bryan01/" target="_blank">Unidades</a></li>
             <!-- <li><a href="#">Serviços</a></li>
             <li><a href="#">Contato</a></li> -->
           </ul>
